fix index page ui elements misalignment

--- a/src/PresenceLight.Worker/wwwroot/css/site.css
+++ b/src/PresenceLight.Worker/wwwroot/css/site.css
@@ -16,7 +16,7 @@ a, .btn-link {
 .bottom-right {
     position: relative;
     bottom: 120px;
-    left: 620px;
+    left: 240px;
 }
 
 .validation-message {
